--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <picture>
                 <source media="(max-width: 768px)" srcset="imagens/falcon9/falcon-m.jpg" type="image/jpeg">
                 <source media="(max-width: 992px)" srcset="imagens/falcon9/falcon-m.jpg" type="image/jpeg">
-                <img src="imagens/falcon9/falcon-g.jpg" alt="Falcon 9" style="width:100%">
+                <img src="imagens/falcon9/falcon-g.jpg" alt="Falcon 9" style="width:100%;">
             </picture>
             <div class="box">
                 <h2>Falcon 9</h2>
@@ -105,11 +105,6 @@
                 </p>
             </div>
         </section>
-              
-
-
-
-
 
         <section>
             <img src="https://imgs.search.brave.com/03ftBRCzOYrnTy1ANsENkLfy5coJvL8PYcTt3CHfz5k/rs:fit:1200:1200:1/g:ce/aHR0cDovL3d3dy5l/c2EuaW50L3Zhci9l/c2Evc3RvcmFnZS9p/bWFnZXMvZXNhX211/bHRpbWVkaWEvaW1h/Z2VzLzIwMDkvMDcv/YXJpYW5lXzVfZWNh/X3YxODlfbGF1bmNo/ZXJfaXNfcmVhZGll/ZF9mb3JfbGlmdC1v/ZmYvOTYwMjI5Ny0z/LWVuZy1HQi9Bcmlh/bmVfNV9FQ0FfVjE4/OV9sYXVuY2hlcl9p/c19yZWFkaWVkX2Zv/cl9saWZ0LW9mZl9w/aWxsYXJzLmpwZw" alt="Ariane-V">
