--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     <footer>
         <p>Site criado por David Silva</p>
         <span>
-            <a href="https://davidsilvaj0.github.io">
-                <img src="https://cdn-icons-png.flaticon.com/512/1051/1051326.png" alt="GitHub" width="50px" height="50px">
+            <a href="https://github.com/davidSilvaj0">
+                <img src="https://cdn-icons-png.flaticon.com/512/270/270798.png" alt="GitHub" width="50px" height="50px">
             </a>
         </span>
     </footer>
