--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Era Espacial</title>
     <link rel="shortcut icon" href="imagens/shuttleIcon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/mediaquery.css">
 </head>
@@ -55,6 +56,11 @@
             <div class="box">
                 <h2>Falcon 9</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eveniet quibusdam minima architecto doloremque reiciendis debitis aut, assumenda dolorum eius aspernatur vel sit nihil praesentium laudantium veritatis ipsum commodi fugiat similique obcaecati quisquam in, aliquid nulla repellendus. Minus, hic reiciendis possimus quisquam nostrum, asperiores quam accusamus tenetur impedit illum et.</p>
+                <a href="#" class="verMais">
+                    <span class="material-symbols-outlined">
+                        rocket_launch
+                    </span>
+                </a>
             </div>
         </section>
 
@@ -68,6 +74,11 @@
             <div class="box">
                 <h2>SLS</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate delectus, et nemo tempore ullam ratione! Ipsam, est! Rem sint porro minus? Totam voluptatem optio error repudiandae asperiores ea quas explicabo, sint dolorum rerum minus animi, repellat debitis modi id consequatur quibusdam, eius vel soluta corporis eum eveniet! Cum, laboriosam cupiditate sunt suscipit a impedit? Voluptatum sapiente delectus impedit. Similique, accusamus?</p>
+                <a href="#" class="verMais">
+                    <span class="material-symbols-outlined">
+                        rocket_launch
+                    </span>
+                </a>
             </div>
         </section>
 
@@ -81,6 +92,11 @@
             <div class="box">
                 <h2>Starship</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis dolores beatae quisquam saepe minima neque! Ut unde maiores, reprehenderit dolore mollitia suscipit excepturi nostrum, odit repellendus dicta dolorum voluptas eligendi ducimus saepe aliquid sequi ipsum quisquam dolor inventore quas. Ex, asperiores. Eaque pariatur, odio, temporibus amet reprehenderit ratione ab laboriosam eum ea, soluta odit iure vel vero modi eius cumque.</p>
+                <a href="#" class="verMais">
+                    <span class="material-symbols-outlined">
+                        rocket_launch
+                    </span>
+                </a>
             </div>
         </section>
         
@@ -94,6 +110,11 @@
             <div class="box">
                 <h2>Delta-IV-Heavy</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis dolores beatae quisquam saepe minima neque! Ut unde maiores, reprehenderit dolore mollitia suscipit excepturi nostrum, odit repellendus dicta dolorum voluptas eligendi ducimus saepe aliquid sequi ipsum quisquam dolor inventore quas. Ex, asperiores. Eaque pariatur, odio, temporibus amet reprehenderit ratione ab laboriosam eum ea, soluta odit iure vel vero modi eius cumque.</p>
+                <a href="#" class="verMais">
+                    <span class="material-symbols-outlined">
+                        rocket_launch
+                    </span>
+                </a>
             </div>
         </section>
         <!-- <section>
@@ -139,7 +160,9 @@
                 menu.style.display= 'none';
             }
             else
-            {menu.style.display= 'block';}
+            {
+                menu.style.display= 'block';
+            }
             
         }
     </script>
