--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <picture>
                 <source media="(max-width: 768px)" srcset="imagens/shuttle/shuttle-p.jpg" type="image/jpeg">
                 <source media="(max-width: 992px)" srcset="imagens/shuttle/shuttle-m.jpg" type="image/jpeg">
-                <img src="imagens/shuttle/shuttle-g.jpg" alt="Shuttle" style="width:100%">
+                <img src="https://images.pexels.com/photos/2159/flight-sky-earth-space.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Shuttle">
             </picture>
             <div class="box">
                 <h2>Space Shuttle</h2>
@@ -51,7 +51,7 @@
             <picture>
                 <source media="(max-width: 768px)" srcset="imagens/falcon9/falcon-m.jpg" type="image/jpeg">
                 <source media="(max-width: 992px)" srcset="imagens/falcon9/falcon-m.jpg" type="image/jpeg">
-                <img src="imagens/falcon9/falcon-g.jpg" alt="Falcon 9" style="width:100%;">
+                <img src="imagens/falcon9/falcon9-g2.jpg" alt="Falcon 9">
             </picture>
             <div class="box">
                 <h2>Falcon 9</h2>
@@ -68,7 +68,7 @@
             <picture>
                 <source media="(max-width: 768px)" srcset="imagens/sls/sls-m.jpg" type="image/jpeg">
                 <source media="(max-width: 992px)" srcset="imagens/sls/sls-m.jpg" type="image/jpeg">
-                <img src="imagens/sls/sls-g.jpg" alt="SLS" style="width:100%">
+                <img src="imagens/sls/sls-g2.jpg" alt="SLS">
             </picture>
 
             <div class="box">
@@ -86,7 +86,7 @@
             <picture>
                 <source media="(max-width: 768px)" srcset="imagens/starship/starship-m.jpg" type="image/jpeg">
                 <source media="(max-width: 992px)" srcset="imagens/starship/starship-g.jpg" type="image/jpeg">
-                <img src="imagens/starship/starship-g.jpg" alt="Starship" style="width:100%">
+                <img src="imagens/starship/starship-g2.jpg" alt="Starship" >
             </picture>
             
             <div class="box">
@@ -105,7 +105,7 @@
             <picture>
                 <source media="(max-width: 768px)" srcset="imagens/delta-iv-heavy/delta-iv-heavy-m.jpg" type="image/jpeg">
                 <source media="(max-width: 992px)" srcset="imagens/delta-iv-heavy/delta-iv-heavy-m.jpg" type="image/jpeg">
-                <img src="imagens/delta-iv-heavy/delta-iv-heavy-g.jpg" alt="dhIV" style="width:100%">
+                <img src="imagens/delta-iv-heavy/delta-iv-heavy-g.jpg" alt="dhIV">
             </picture>
             <div class="box">
                 <h2>Delta-IV-Heavy</h2>
@@ -150,6 +150,7 @@
             <a href="https://github.com/davidSilvaj0">
                 <img src="https://cdn-icons-png.flaticon.com/512/270/270798.png" alt="GitHub" width="50px" height="50px">
             </a>
+            <!-- https://www.flickr.com/photos/nasamarshall/52177029653/ -->
         </span>
     </footer>
 
