--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Era Espacial</title>
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/mediaquery.css">
     <link rel="shortcut icon" href="imagens/shuttleIcon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="estilos/style.css">
-    <link rel="stylesheet" href="estilos/mediaquery.css">
 </head>
 <body>
     <header>
@@ -36,6 +36,7 @@
             </picture>
             <div class="box">
                 <h2>Space Shuttle</h2>
+                <hr>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio assumenda exercitationem, accusamus veritatis accusantium, quasi distinctio vero dolorum earum impedit ea similique numquam perspiciatis ut enim blanditiis totam! Est, impedit?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab perferendis repellat nihil vero, voluptatem aperiam sint rerum natus? Beatae aperiam quos corrupti laudantium optio sequi quaerat, dolorem dolores facilis ex rem magni. Dolorem labore consequatur illo atque quibusdam, nisi maxime.
                 </p>
@@ -55,6 +56,7 @@
             </picture>
             <div class="box">
                 <h2>Falcon 9</h2>
+                <hr>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eveniet quibusdam minima architecto doloremque reiciendis debitis aut, assumenda dolorum eius aspernatur vel sit nihil praesentium laudantium veritatis ipsum commodi fugiat similique obcaecati quisquam in, aliquid nulla repellendus. Minus, hic reiciendis possimus quisquam nostrum, asperiores quam accusamus tenetur impedit illum et.</p>
                 <a href="#" class="verMais">
                     <span class="material-symbols-outlined">
@@ -73,6 +75,7 @@
 
             <div class="box">
                 <h2>SLS</h2>
+                <hr>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate delectus, et nemo tempore ullam ratione! Ipsam, est! Rem sint porro minus? Totam voluptatem optio error repudiandae asperiores ea quas explicabo, sint dolorum rerum minus animi, repellat debitis modi id consequatur quibusdam, eius vel soluta corporis eum eveniet! Cum, laboriosam cupiditate sunt suscipit a impedit? Voluptatum sapiente delectus impedit. Similique, accusamus?</p>
                 <a href="#" class="verMais">
                     <span class="material-symbols-outlined">
@@ -91,6 +94,7 @@
             
             <div class="box">
                 <h2>Starship</h2>
+                <hr>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis dolores beatae quisquam saepe minima neque! Ut unde maiores, reprehenderit dolore mollitia suscipit excepturi nostrum, odit repellendus dicta dolorum voluptas eligendi ducimus saepe aliquid sequi ipsum quisquam dolor inventore quas. Ex, asperiores. Eaque pariatur, odio, temporibus amet reprehenderit ratione ab laboriosam eum ea, soluta odit iure vel vero modi eius cumque.</p>
                 <a href="#" class="verMais">
                     <span class="material-symbols-outlined">
@@ -109,6 +113,7 @@
             </picture>
             <div class="box">
                 <h2>Delta-IV-Heavy</h2>
+                <hr>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis dolores beatae quisquam saepe minima neque! Ut unde maiores, reprehenderit dolore mollitia suscipit excepturi nostrum, odit repellendus dicta dolorum voluptas eligendi ducimus saepe aliquid sequi ipsum quisquam dolor inventore quas. Ex, asperiores. Eaque pariatur, odio, temporibus amet reprehenderit ratione ab laboriosam eum ea, soluta odit iure vel vero modi eius cumque.</p>
                 <a href="#" class="verMais">
                     <span class="material-symbols-outlined">
@@ -147,7 +152,7 @@
     <footer>
         <p>Site criado por David Silva</p>
         <span>
-            <a href="https://github.com/davidSilvaj0">
+            <a href="https://github.com/davidSilvaj0" target="_blank">
                 <img src="https://cdn-icons-png.flaticon.com/512/270/270798.png" alt="GitHub" width="50px" height="50px">
             </a>
             <!-- https://www.flickr.com/photos/nasamarshall/52177029653/ -->
