--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="imagens/shuttleIcon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header>
@@ -47,6 +48,11 @@
                 </a>
             </div>  
         </section>
+
+  
+            <span class="material-symbols-outlined " id="btnUp">
+                arrow_circle_up
+            </span>
 
         <section>
             <picture>
@@ -158,7 +164,7 @@
             <!-- https://www.flickr.com/photos/nasamarshall/52177029653/ -->
         </span>
     </footer>
-
+    
     <script>
         function openMenu(){
             if ( menu.style.display == 'block')
@@ -168,9 +174,20 @@
             else
             {
                 menu.style.display= 'block';
-            }
-            
+            }   
         }
+
+        const buttonUP = document.querySelector("#btnUp");
+
+        buttonUP.addEventListener("click",function (){
+
+
+            window.scrollTo({
+                top:0,
+                left:0,
+                behavior:"smooth"
+            })
+        });
     </script>
 </body>
 </html>
