--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
         </section>
 
   
-            <span class="material-symbols-outlined " id="btnUp">
-                arrow_circle_up
-            </span>
+            <button id="btnUp">
+                <span class="material-symbols-outlined " >
+                    arrow_upward
+                </span>
+            </button>
 
         <section>
             <picture>
