--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 <h2>Space Shuttle</h2>
                 <hr>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio assumenda exercitationem, accusamus veritatis accusantium, quasi distinctio vero dolorum earum impedit ea similique numquam perspiciatis ut enim blanditiis totam! Est, impedit?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab perferendis repellat nihil vero, voluptatem aperiam sint rerum natus? Beatae aperiam quos corrupti laudantium optio sequi quaerat, dolorem dolores facilis ex rem magni. Dolorem labore consequatur illo atque quibusdam, nisi maxime.
+                    O Space Shuttle era um veículo parcialmente reutilizável usado pela NASA para lançar satélites e outro tipo de cargas, servia para suas missões tripuladas de reparos de aparelhos em órbita no espaço e reabastecimento da Estação Espacial Internacional. Este tornou-se o sucessor do Saturn V, anteriormente usado nas missões apollo para a lua.
+                    Atualmente já aposentado, com total de 135 missões ao total.
                 </p>
                 <a href="#" class="verMais">
                     <span class="material-symbols-outlined">
@@ -65,7 +66,8 @@
             <div class="box">
                 <h2>Falcon 9</h2>
                 <hr>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eveniet quibusdam minima architecto doloremque reiciendis debitis aut, assumenda dolorum eius aspernatur vel sit nihil praesentium laudantium veritatis ipsum commodi fugiat similique obcaecati quisquam in, aliquid nulla repellendus. Minus, hic reiciendis possimus quisquam nostrum, asperiores quam accusamus tenetur impedit illum et.</p>
+                <p>O Falcon 9 é um veículo projetado pela empresa SpaceX, constituído por dois estágios, sendo o primeiro totalmente reutilizável, diferente do segundo estágio que acaba por se desintegrar na reentrada na atmosfera.
+                Desde da seu primeiro voo tem vindo a evoluir com várias versões, com a capacidade de lançar 22t para a LEO é um dos foguetes mais confiáveis atualmente, levando já vários astronautas nas missões tripuladas para a ISS.</p>
                 <a href="#" class="verMais">
                     <span class="material-symbols-outlined">
                         rocket_launch
