--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <div class="box">
                 <h2>Falcon 9</h2>
                 <hr>
-                <p>O Falcon 9 é um veículo projetado pela empresa SpaceX, constituído por dois estágios, sendo o primeiro totalmente reutilizável, diferente do segundo estágio que acaba por se desintegrar na reentrada na atmosfera.
-                Desde da seu primeiro voo tem vindo a evoluir com várias versões, com a capacidade de lançar 22t para a LEO é um dos foguetes mais confiáveis atualmente, levando já vários astronautas nas missões tripuladas para a ISS.</p>
+                <p>O Falcon 9 é um veículo projetado pela empresa SpaceX, constituído por dois estágios, sendo o primeiro estágio e as coifas sendo totalmente reutilizáveis, diferente do segundo estágio que acaba por se desintegrar na reentrada na atmosfera.
+                Desde da seu primeiro voo tem vindo a evoluir com várias versões, com a capacidade de lançar 22t para a LEO, é um dos foguetes mais confiáveis atualmente, com mais de 100 missões Starlink, levando também vários astronautas nas missões tripuladas para a ISS.</p>
                 <a href="#" class="verMais">
                     <span class="material-symbols-outlined">
                         rocket_launch
