--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>  
         </section>
 
-  
+            <!-- botao para voltar para cima -->
             <button id="btnUp">
                 <span class="material-symbols-outlined " >
                     arrow_upward
@@ -86,7 +86,7 @@
             <div class="box">
                 <h2>SLS</h2>
                 <hr>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate delectus, et nemo tempore ullam ratione! Ipsam, est! Rem sint porro minus? Totam voluptatem optio error repudiandae asperiores ea quas explicabo, sint dolorum rerum minus animi, repellat debitis modi id consequatur quibusdam, eius vel soluta corporis eum eveniet! Cum, laboriosam cupiditate sunt suscipit a impedit? Voluptatum sapiente delectus impedit. Similique, accusamus?</p>
+                <p>O Space Launch System, também conhecido por SLS, é um foguete de 98m de altura, cocebido pela NASA para levar novamente os humanos para a lua dentro da cápsula Orion. Com os 4 motores centrais e 2 boosters laterais de combustível liquido, estavamos a falar de um veículo com muita mais potência comparado ao Saturn V. Iniciado a sua construção em 2011, o seu primeiro voo estará marcado para o último trimestre de dezembro. </p>
                 <a href="#" class="verMais">
                     <span class="material-symbols-outlined">
                         rocket_launch
