update text and css

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="box">
                 <h2>SLS</h2>
                 <hr>
-                <p>O Space Launch System, também conhecido por SLS, é um foguete de 98m de altura, cocebido pela NASA para levar novamente os humanos para a lua dentro da cápsula Orion. Com os 4 motores centrais e 2 boosters laterais de combustível liquido, estavamos a falar de um veículo com muita mais potência comparado ao Saturn V. Iniciado a sua construção em 2011, o seu primeiro voo estará marcado para o último trimestre de dezembro. </p>
+                <p>O Space Launch System, também conhecido por SLS, é um foguete com 98m de altura, cocebido pela NASA para levar novamente os humanos para a lua dentro da cápsula Orion. Com os 4 motores centrais e 2 boosters laterais de combustível liquido, estavamos a falar de um veículo com muita mais potência comparado ao Saturn V. Iniciado a sua construção em 2011, o seu primeiro voo estará marcado para o último trimestre de dezembro. </p>
                 <a href="#" class="verMais">
                     <span class="material-symbols-outlined">
                         rocket_launch
@@ -111,7 +111,8 @@
             <div class="box">
                 <h2>Starship</h2>
                 <hr>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis dolores beatae quisquam saepe minima neque! Ut unde maiores, reprehenderit dolore mollitia suscipit excepturi nostrum, odit repellendus dicta dolorum voluptas eligendi ducimus saepe aliquid sequi ipsum quisquam dolor inventore quas. Ex, asperiores. Eaque pariatur, odio, temporibus amet reprehenderit ratione ab laboriosam eum ea, soluta odit iure vel vero modi eius cumque.</p>
+                <p>A Starship, projeto pela empresa SpaceX, é o foguete mais poderoso e maior de todos os tempos, é um veículo totalmente
+                    reutilizável, sendo algo nunca antes feito. Com 120m de altura, é constituído por 2 estágios, sendo o primeiro conhecido por SuperHeavy e o segundo sendo a Starship. Sendo um sistema totalmente revolucionário, irá nos trazer possiblidades no futuro.</p>
                 <a href="#" class="verMais">
                     <span class="material-symbols-outlined">
                         rocket_launch
