--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/mediaquery.css">
     <link rel="shortcut icon" href="imagens/shuttleIcon.ico" type="image/x-icon">
+    <!-- <script src="scripts.js"></script> -->
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -26,10 +27,10 @@
         </div>
             <nav id="menu">
                 <ul>
-                    <li><a href="#">Início</a></li>
+                    <li><a href="index.html">Início</a></li>
                     <li><a href="#">Foguetes</a></li>
                     <li><a href="#">Motores</a></li>
-                    <li><a href="#">Sobre</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
                 </ul>
             </nav>
 
