--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="box">
                 <h2>SLS</h2>
                 <hr>
-                <p>O Space Launch System, também conhecido por SLS, é um foguete com 98m de altura, cocebido pela NASA para levar novamente os humanos para a lua dentro da cápsula Orion. Com os 4 motores centrais e 2 boosters laterais de combustível liquido, estamos a falar de um veículo com muita mais potência comparado ao Saturn V. Iniciado a sua construção em 2011, o seu primeiro voo estará marcado para o último trimestre de dezembro. </p>
+                <p>O Space Launch System, também conhecido por SLS, é um foguete com 98m de altura, cocebido pela NASA para levar novamente os humanos para a lua dentro da cápsula Orion. Com os 4 motores centrais e 2 boosters laterais de combustível sólido, estamos a falar de um veículo com muita mais potência comparado ao Saturn V. Iniciado a sua construção em 2011, o seu primeiro voo estará marcado para o último trimestre de de 2022. </p>
                 <a href="#" class="verMais">
                     <span class="material-symbols-outlined">
                         rocket_launch
@@ -132,7 +132,7 @@
             <div class="box">
                 <h2>Delta-IV-Heavy</h2>
                 <hr>
-                <p>O Delta IV Heavy é um veículo de origem norte americana, da empresa ULA. É constituído pelo estágio central, dois laterais e o segundo estágio, formando um foguete bastante podereso. Com mais de 15 anos missões com sucesso, efeciente, e com capacidade de carga pesada para entregar cargas úteis de alta prioridade da Força Aérea dos EUA, do Escritório Nacional de Reconhecimento e da NASA para a órbita.</p>
+                <p>O Delta IV Heavy é um veículo de origem norte americana, da empresa ULA. É constituído por um estágio central, dois laterais e o segundo estágio, formando um foguete bastante podereso. Com mais de 15 anos de missões com sucesso, efeciente, e com capacidade de carga pesada para entregar cargas úteis de alta prioridade da Força Aérea dos EUA, do Escritório Nacional de Reconhecimento e da NASA para a órbita.</p>
                 <a href="#" class="verMais">
                     <span class="material-symbols-outlined">
                         rocket_launch
