update animation rockets card

--- a/sobre.html
+++ b/sobre.html
@@ -29,7 +29,7 @@
             <nav id="menu">
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="#">Foguetes</a></li>
+                    <li><a href="foguetes.html">Foguetes</a></li>
                     <li><a href="#">Motores</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                 </ul>
