--- a/website-rocket-v1.1/motores.html
+++ b/website-rocket-v1.1/motores.html
@@ -57,11 +57,7 @@
                         expand_more
                     </span>
                 </button>
-                <p id="info">The Raptor engine is a reusable methane-oxygen staged-combustion engine that powers the
-                    Starship system and has twice the thrust of the Falcon 9 Merlin engine. Starship will be powered by
-                    six engines, three Raptor engines, and three Raptor Vacuum (RVac) engines, which are designed for
-                    use in the vacuum of space. Super Heavy will be powered by 33 Raptor engines, with 13 in the center
-                    and the remaining 20 around the perimeter of the booster’s aft end.</p>
+                <p id="info">Raptor é um motor reutilizável de combustão faseada de metano-oxigénio que alimenta o sistema Starship e tem o dobro do impulso do motor Merlin do Falcon 9. A Starship será alimentada por seis motores, três motores Raptor e três motores Raptor Vacuum (RVac), concebidos para serem utilizados no vácuo do espaço. O Super Heavy será alimentado por 33 motores Raptor, com 13 no centro e os restantes 20 à volta do perímetro da extremidade
             </div>
         </div>
         <hr class="sep">
@@ -75,11 +71,11 @@
                         expand_more
                     </span>
                 </button>
-                <p id="info" class="info">The Raptor engine is a reusable methane-oxygen staged-combustion engine that powers the
-                    Starship system and has twice the thrust of the Falcon 9 Merlin engine. Starship will be powered by
-                    six engines, three Raptor engines, and three Raptor Vacuum (RVac) engines, which are designed for
-                    use in the vacuum of space. Super Heavy will be powered by 33 Raptor engines, with 13 in the center
-                    and the remaining 20 around the perimeter of the booster’s aft end.</p>
+                <p id="info" class="info">O BE-4 é um motor líquido de fabrico americano
+atualmente em desenvolvimento pela Blue Origin para aplicações de
+para aplicações de impulso de veículos de lançamento orbital. O BE-4 utiliza
+oxigénio líquido (LOx) e gás natural liquefeito (GNL)
+
             </div>
         </div>
         <hr class="sep">
@@ -93,10 +89,7 @@
                             expand_more
                     </span>
                 </button>
-                <p id="info" class="info">Merlin is a family of rocket engines developed by SpaceX for use on its Falcon 1, Falcon 9
-                    and Falcon Heavy launch vehicles. Merlin engines use a rocket grade kerosene (RP-1) and liquid
-                    oxygen as rocket propellants in a gas-generator power cycle. The Merlin engine was originally
-                    designed for recovery and reuse.</p>
+                <p id="info" class="info">Merlin é uma família de motores de foguetão desenvolvida pela SpaceX para utilização nos seus veículos de lançamento Falcon 1, Falcon 9 e Falcon Heavy. Os motores Merlin utilizam querosene de qualidade de foguetão (RP-1) e oxigénio líquido como propulsores de foguetões num ciclo de energia de gerador de gás. O motor Merlin foi originalmente concebido para ser recuperado e reutilizado.</p>
             </div>
         </div>
     </section>
