--- a/website-rocket-v1.1/sobre.html
+++ b/website-rocket-v1.1/sobre.html
@@ -48,8 +48,7 @@
             <div class="box">
                 <h2>Sobre</h2>
                 <p>
-                    Este site foi concebido para apresentar e passar conhecimentos sobre engenharia aeroespacial, onde é possível saber sobre grande maioria dos foguetes em detalhe assim como os motores. Projetado para o utilizador ter a melhor experiência possível, feito com máxima qualidade possível.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam consequatur dolorem accusamus officiis, voluptate commodi velit enim! Deleniti impedit consequuntur quaerat cumque autem nemo? Saepe illum ratione modi aliquam et repellat maxime in odit est animi iste sint, voluptas cumque dicta corrupti. Voluptatem, quas perferendis doloribus consequuntur dolores ea temporibus.
+                    Este site foi concebido para apresentar e passar conhecimentos sobre engenharia aeroespacial, onde é possível saber sobre grande maioria dos foguetes em detalhe assim como os motores. Projetado para o utilizador ter a melhor experiência possível.
 
                 </p>
             </div>
